--- a/styles.css
+++ b/styles.css
@@ -27,10 +27,14 @@ body {
 }
 
 button {
-    background-color: #ff0000;
+    background-color: #c51111;
     color: #fff;
     padding: 10px 20px;
+    height: 50px;
+    width: 200px;
     border: none;
-    border-radius: 2px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: bold;
     cursor: pointer;
 }
