ajustado a estrutura do HTML e CSS, renomeando classes e removendo estilos desnecessários

--- a/styles.css
+++ b/styles.css
@@ -13,26 +13,13 @@ body {
     height: 100vh;
 }
 
-.content img {
+.caixa-principal img {
     height: 200px
 }
 
-.content {
+.caixa-principal {
     width: 40%;
 
-}
-
-.container img {
-    height: 100px;
-}
-
-.navbar ul li {
-    display: flex;
-    margin-right: 20px;
-    justify-content: center;
-    align-items: center;
-    
-    
 }
 
 button {
@@ -52,9 +39,18 @@ button {
    position: absolute;
     bottom: 20px;
     right: 20px;
-    z-index: -2;
+    z-index: 1;
 }
 .logo-mario-luigi img {
     width: 300px;
     height: 300px;
+}
+
+.caixa-video {
+    position: fixed;
+    z-index: -1;
+}
+video {
+    width: 100vw;
+    height: 100vh;
 }
