criado uma div nome da class mascara

--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,12 @@ body {
 }
 
 .caixa-principal img {
-    height: 200px
+    height: 200px;
 }
 
 .caixa-principal {
     width: 40%;
+    margin-left: -500px;
 
 }
 
