--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,11 @@ button {
 video {
     width: 100vw;
 }
+
+.mascara {
+    height: 100%;
+    width: 100%;
+   background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
+    position: fixed;
+    top: 0;
+}
