--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ button {
     text-transform: uppercase;
     font-weight: bold;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .logo-mario-luigi {
