--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,10 @@ p {
     font-size: 15px;
     transition: all 1s ease-in-out;
 }
+
+.formulario {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    
+}
