estilizado o formulario > input e textarea

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,27 @@ p {
 .formulario {
     background-color: #fff;
     display: flex;
+    gap: 20px;
     flex-direction: column;
-    
+    position: fixed;
+    top: 50px;
+    left: 50px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+input {
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    padding-left: 5px;
+    outline-color: #18d80f;
+}
+
+textarea {
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    padding-left: 5px;
+    outline-color: #18d80f;
 }
