--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,10 @@ button:hover {
     
 }
 video {
-    width: 100vw;
+    min-height: 100%;
+    min-width: 100%;
+    position: fixed;
+    top: 0;
 }
 
 .mascara {
@@ -156,4 +159,13 @@ textarea {
     border: 1px solid gray;
     padding-left: 5px;
     outline-color: #18d80f;
+}
+
+.mascara-formulario {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
+
 }
