--- a/styles.css
+++ b/styles.css
@@ -62,16 +62,20 @@ button:hover {
 }
 
 .caixa-video {
-    position: fixed;
-    top: 0;
-    z-index: -1;
+ position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
     
 }
 video {
-    min-height: 100%;
-    min-width: 100%;
-    position: fixed;
-    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .mascara {
@@ -166,6 +170,5 @@ textarea {
     top: 0;
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
-
+   /* background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);*/
 }
