--- a/styles.css
+++ b/styles.css
@@ -139,14 +139,19 @@ p {
 
 .formulario {
     background-color: #fff;
+    width: 280px;
     display: flex;
     gap: 20px;
     flex-direction: column;
     position: fixed;
-    left: -300%;
+    right:-320px;
     top: 30%;
+    transform: translateY(-50%);
     padding: 20px;
-    border-radius: 10px;
+    z-index: 1000;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+    transition: left 0.4s ease;
+    
 }
 
 input {
