--- a/styles.css
+++ b/styles.css
@@ -144,9 +144,9 @@ p {
     gap: 20px;
     flex-direction: column;
     position: fixed;
-    right:-320px;
     top: 30%;
-    transform: translateY(-50%);
+    left:50%;
+    transform: translatex(-50%);
     padding: 20px;
     z-index: 1000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
