--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,6 @@ p {
     position: fixed;
     top: 30%;
     left:-300%;
-    transform: translatex(-50%);
     padding: 20px;
     z-index: 1000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
@@ -175,7 +174,7 @@ textarea {
     top: 0;
     width: 100vw;
     height: 100vh;
-   /* background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);*/
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
 }
 
 
