att alguns codigo

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ video {
 .mascara {
     height: 100%;
     width: 100%;
-   background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
+    background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
     position: fixed;
     top: 0;
 }
@@ -150,18 +150,11 @@ p {
     padding: 20px;
     z-index: 1000;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-    transition: opacity 0.4s, transform 0.4s ease;
-    pointer-events: none;
-
-}
-
-.formulario.ativo {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-    pointer-events: auto;
-}
+    transition: left 4s ease-in-out;
     
 
+}
+    
 input {
     height: 40px;
     border-radius: 5px;
@@ -179,20 +172,15 @@ textarea {
 }
 
 .mascara-formulario {
-    opacity: 0;
     visibility: hidden;
     position: fixed;
     top: 0;
     width: 100vw;
     height: 100vh;
     background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
-    transform: opacity 0.4s;
+    transform: visibility 4s ease-in-out;
 }
 
-.mascara-formulario.ativo {
-    opacity: 1;
-    visibility: visible;
-}
 
 
 
