--- a/style-nosso-servico.css
+++ b/style-nosso-servico.css
@@ -7,14 +7,7 @@
 }
 
 
-body {
-   height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
+.caixa-video-servico {
+    width: 100%;
+    height: 100%;
 }
-
-body {
-    height: 100vh;
-}
-
-.caixa-video-serviço
