--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,27 @@ textarea {
     transform: visibility 1s ease-in-out;
 }
 
+/*media query 
+
+max --> valor menor que Npx, aplica o css do media
+min --> valor maior que Npx, aplica o css do media
+
+
+
+*/
+
+@media (max-width: 1100px ) {
+
+    p {
+        display:none;
+    }
+
+    .caixa-mae {
+        flex-direction: column;
+    }
+
+}
+
 
 
 
